Cobbler CHANGELOG

- Oct 18 2010 - 2.0.7
- (BUGF) Disabled certain undesirable behavior of cheetah
- (BUGF) Don't fail on reposync just because one reposync fails
- Enable the use of cobbler on EL6 via mod_wsgi.  cobbler_web still requires mod_python though
- (BUGF) some fixes for authn_passthru so that sessions do not switch
- (BUGF) properly handle None being handed to the process caller as the logger
- (BUGF) Fix replicate when bringing down changed systems
- (BUGF) Various fixes for koan on RHEL6
- (BUGF) Add fc14 and fc15

- Jul 15 2010 - 2.0.5
- (BUGF) Improved logging
- (BUGF) Improved selinux friendliness
- (BUGF) Many improvements and bugfixes
- Full list fde282c4bd88c07a1d5c3d3215950b1af0abe190..189b4096b3ed198651237c49169e48ed49078aa6

- Apr 27 2010 - 2.0.4
- (BUGF) fetch extra metadata from upstream repositories more safely
- (BUGF) allow the creation of subprofiles again
- (BUGF) don't warn needlessly when repo rpm_list is empty
- (BUGF) run createrepo on partial yum mirrors
- (BUGF) change default mode for new directories from 0777 to 0755
- (BUGF) fix replication pruning to not prune systems when inappropriate
- (BUGF) always authorize the CLI
- (BUGF) fix passthru auth Trac#549
- (BUGF) fix for spacewalk bug 529277
- (BUGF) fix umask so files are not world writable
- (BUGF) fix default pxe template to support default system record
- (BUGF) redo the PXE menuif a profile is removed
- (BUGF) properly escape snippets

- Feb 15 2010 - 2.0.3.1
- (BUGF) Fix kernel command line parsing

- Feb 12 2010 - 2.0.3
- (FEAT) API Test Framework
- (FEAT) Cobbler4j Eclipse bindings
- (BUGF) Trac544 Create noarch and src repos
- (BUGF) Snippet Cleanups
- (FEAT) Cleanup Kickstart Generation
- (FEAT) Ability to include remote kickstart content
- (FEAT) Koan ability for remote kickstart content
- (BUGF) Trac547 Profile Creation in WebUI
- (BUGF) Trac520 Sort HTML Dropdown Lists
- (BUGF) Allow koan to use http urls for kernel/initrd